New hll field type to store hyperloglog sketches.